--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,9 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
 
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+
   <!-- Others -->
   <export>
   </export>
